# tfs-chain

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: block.rs  chain.rs  genesis.rs  lib.rs  main.rs  mempool.rs  persistent_chain.rs  state.rs
src/consensus/: bft.rs  mod.rs
src/crypto/: address.rs  hash.rs  keypair.rs  mod.rs
src/mines_script/: mod.rs  parser.rs  validator.rs
src/node/: config.rs  http.rs  messages.rs  mod.rs  p2p.rs  proposer.rs
src/storage/: keys.rs  mod.rs  schema.rs
src/tx/: burn.rs  inscribe.rs  mod.rs  sigil.rs  transfer.rs  verify.rs
